fixed phone spacing

--- a/reverse.css
+++ b/reverse.css
@@ -1,7 +1,15 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 .word {
     display: flex;
-    gap: 0.5rem;
+    gap: 0.2rem;
     margin-top: 2rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 html {
@@ -15,6 +23,15 @@ html {
 }
 
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+#container {
+    width: min(450px, 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,8 +60,9 @@ input {
 }
 
 .title {
-    margin-bottom: 0;
+    margin-top: 1rem;
     text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black;
+    text-align: center;
 }
 
 .subtitle {
@@ -71,14 +89,14 @@ ul {
 
 .words-container {
     margin-top: 1rem;
-    width: 17.5rem;
+    width: min(450px, 100%);
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background: #191516;
-    border-radius: 2vw;
+    border-radius: .5rem;
 }
 
 .words-container:has(.on) {
